Fix NavBar covered by PackageCard when the latter is hovered (#69)

--- a/src/styles/NavBar.module.scss
+++ b/src/styles/NavBar.module.scss
@@ -25,7 +25,7 @@
   height: 58px;
   position: sticky;
   top: 0;
-  z-index: 1;
+  z-index: 2;
 
   justify-content: center;
   transition: linear 100ms;
